tests/functional/data/transpiler/common/errors/dim/dim_wrong_too_little_args.err
dim_wrong_too_little_args.cpp:1:24: error: Missing dimensions, expected 2 argument(s)
    1 | typedef float* mat89_f @dim(8, 9);
      |                        ^
